add redux service template; clean up; optimizations

--- a/Code/Configurator/configurator.mcflurry.swift.liquid
+++ b/Code/Configurator/configurator.mcflurry.swift.liquid
@@ -1,19 +1,26 @@
 {% include 'header' %}
 
 import UIKit
-import ViperMcFlurryX
 import OnDeallocateX
+{% if  custom_parameters.extended_configurator_create != 'true' %}import ViperMcFlurryX{% endif %}
 
+{% if custom_parameters.extended_configurator_create and custom_parameters.extended_configure %}
+class {{ prefix }}{{ module_info.name }}ModuleConfigurator {
+{% else %}   
 class {{ prefix }}{{ module_info.name }}ModuleConfigurator: NSObject, RamblerViperModuleFactoryProtocol {
+{% endif %}
 
-    func configureModuleForViewInput<UIViewController>(viewInput: UIViewController) {
-
+    func configureModuleForViewInput<UIViewController>(viewInput: UIViewController{% if custom_parameters.extended_configurator_create and custom_parameters.extended_configure %}, with config: {{ prefix }}{{ module_info.name }}ModuleConfig{% endif %}) {
         if let viewController = viewInput as? {{ prefix }}{{ module_info.name }}ViewController {
+            {% if custom_parameters.extended_configurator_create and custom_parameters.extended_configure %}
+            configure(viewController: viewController, with: config)
+            {% else %}
             configure(viewController: viewController)
+            {% endif -%}
         }
     }
 
-    private func configure(viewController: {{ prefix }}{{ module_info.name }}ViewController) {
+    private func configure(viewController: {{ prefix }}{{ module_info.name }}ViewController{% if custom_parameters.extended_configurator_create and custom_parameters.extended_configure %}, with config: {{ prefix }}{{ module_info.name }}ModuleConfig{% endif %}) {
 
         guard viewController.output == nil else { // prevent double configuration
             return
@@ -38,17 +45,27 @@ class {{ prefix }}{{ module_info.name }}ModuleConfigurator: NSObject, RamblerVip
         viewController.onWillDeallocate {
             presenter.willDeinit()
         }
+
+        {% if custom_parameters.extended_configurator_create and custom_parameters.extended_configure %}
+        presenter.configure(with: config)
+        {% endif %}
     }
 
-    func create() -> UIViewController {
+    func create({% if custom_parameters.extended_configurator_create and custom_parameters.extended_configure %}with config: {{ prefix }}{{ module_info.name }}ModuleConfig{% endif %}) -> UIViewController {
         let viewController = {{ prefix }}{{ module_info.name }}ViewController()
+        {% if custom_parameters.extended_configurator_create and custom_parameters.extended_configure %}
+        configureModuleForViewInput(viewInput: viewController, with: config)
+        {% else %}
         configureModuleForViewInput(viewInput: viewController)
+        {% endif %}    
         return viewController
     }
     
+    {%- if custom_parameters.extended_configurator_create != 'true' %}
     // MARK: - RamblerViperModuleFactoryProtocol
     
     func instantiateModuleTransitionHandler() -> RamblerViperModuleTransitionHandlerProtocol? {
         return create()
     }
+    {% endif %}
 }
