--- a/Code/Configurator/tabbar.configurator.swift.liquid
+++ b/Code/Configurator/tabbar.configurator.swift.liquid
@@ -5,14 +5,13 @@ import OnDeallocateX
 
 class {{ prefix }}{{ module_info.name }}ModuleConfigurator {
 
-    func configureModuleForViewInput<UIViewController>(viewInput: UIViewController) {
-
+    func configureModuleForViewInput<UIViewController>(viewInput: UIViewController{% if custom_parameters.extended_configurator_create and custom_parameters.extended_configure %}, with config: {{ prefix }}{{ module_info.name }}ModuleConfig{% endif %}) {
         if let viewController = viewInput as? {{ prefix }}{{ module_info.name }}ViewController {
             configure(viewController: viewController)
         }
     }
 
-    private func configure(viewController: {{ prefix }}{{ module_info.name }}ViewController) {
+    private func configure(viewController: {{ prefix }}{{ module_info.name }}ViewController{% if custom_parameters.extended_configurator_create and custom_parameters.extended_configure %}, with config: {{ prefix }}{{ module_info.name }}ModuleConfig{% endif %}) {
 
         guard viewController.output == nil else { // prevent double configuration
             return
@@ -34,6 +33,10 @@ class {{ prefix }}{{ module_info.name }}ModuleConfigurator {
             presenter.willDeinit()
         }
 
+        {% if custom_parameters.extended_configurator_create and custom_parameters.extended_configure %}
+        presenter.configure(with: config)
+        {% endif %}
+
         viewController.viewControllers = [
         /*
             UINavigationController(rootViewController: SomeModuleConfigurator1().create()),
@@ -47,13 +50,17 @@ class {{ prefix }}{{ module_info.name }}ModuleConfigurator {
                 childViewController.tabBarItem = navigationController.viewControllers[0].tabBarItem
             }
         })
-        
+
         viewController.output.viewIsReady()
     }
 
-    func create() -> UIViewController {
+    func create({% if custom_parameters.extended_configurator_create and custom_parameters.extended_configure %}with config: {{ prefix }}{{ module_info.name }}ModuleConfig{% endif %}) -> UIViewController {
         let viewController = {{ prefix }}{{ module_info.name }}ViewController()
+        {% if custom_parameters.extended_configurator_create and custom_parameters.extended_configure %}
+        configureModuleForViewInput(viewInput: viewController, with: config)
+        {% else %}
         configureModuleForViewInput(viewInput: viewController)
+        {% endif %}    
         return viewController
     }
     
