--- a/Code/Interactor/interactor.cachetracker.swift.liquid
+++ b/Code/Interactor/interactor.cachetracker.swift.liquid
@@ -66,4 +66,7 @@ class {{ prefix }}{{ module_info.name }}Interactor: {{ prefix }}{{ module_info.n
         
         output.modelsListDidChange(changes)
     }
+
+    // MARK: Helpers
+    // TODO
 }
