--- a/Code/Interactor/interactor.swift.liquid
+++ b/Code/Interactor/interactor.swift.liquid
@@ -12,4 +12,6 @@ class {{ prefix }}{{ module_info.name }}Interactor: {{ prefix }}{{ module_info.n
     // MARK: {{ prefix }}{{ module_info.name }}InteractorInput
     // TODO
 
+    // MARK: Helpers
+    // TODO
 }
