--- a/Code/Presenter/presenter.mcflurry.cachetracker.swift.liquid
+++ b/Code/Presenter/presenter.mcflurry.cachetracker.swift.liquid
@@ -76,4 +76,7 @@ class {{ prefix }}{{ module_info.name }}Presenter: NSObject, RamblerViperModuleI
         guard state == .ready else { return }
         view.applyModelsListChanges(changes)
     }
+
+    // MARK: Helpers
+    // TODO
 }
