--- a/Code/Presenter/presenter.mcflurry.swift.liquid
+++ b/Code/Presenter/presenter.mcflurry.swift.liquid
@@ -57,4 +57,7 @@ class {{ prefix }}{{ module_info.name }}Presenter: NSObject, RamblerViperModuleI
 
     // MARK: {{ prefix }}{{ module_info.name }}InteractorOutput
     // TODO
+
+    // MARK: Helpers
+    // TODO
 }
