--- a/Code/Router/router.mcflurry.embed.swift.liquid
+++ b/Code/Router/router.mcflurry.embed.swift.liquid
@@ -41,4 +41,7 @@ class {{ prefix }}{{ module_info.name }}Router: {{ prefix }}{{ module_info.name 
     }
     */
 
+    // MARK: Helpers
+    // TODO
+
 }
