--- a/Code/Router/router.mcflurry.swift.liquid
+++ b/Code/Router/router.mcflurry.swift.liquid
@@ -36,4 +36,7 @@ class {{ prefix }}{{ module_info.name }}Router: {{ prefix }}{{ module_info.name 
     }
     */
 
+    // MARK: Helpers
+    // TODO
+
 }
