--- a/Code/Router/router.swift.liquid
+++ b/Code/Router/router.swift.liquid
@@ -8,4 +8,6 @@ class {{ prefix }}{{ module_info.name }}Router: {{ prefix }}{{ module_info.name 
     // MARK: {{ prefix }}{{ module_info.name }}RouterInput
     // TODO
 
+    // MARK: Helpers
+    // TODO
 }
