--- a/Code/View/view_controller.embed.swift.liquid
+++ b/Code/View/view_controller.embed.swift.liquid
@@ -42,4 +42,7 @@ class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, Ramble
             return nil
         }
     }
+
+    // MARK: Helpers
+    // TODO
 }
