--- a/Code/View/view_controller.swift.liquid
+++ b/Code/View/view_controller.swift.liquid
@@ -26,4 +26,7 @@ class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, {{ pre
 
     // MARK: UI Actions
     // TODO
+
+    // MARK: Helpers
+    // TODO
 }
