--- a/Code/View/view_controller.tableview.cachetracker.cell.swift.liquid
+++ b/Code/View/view_controller.tableview.cachetracker.cell.swift.liquid
@@ -10,6 +10,8 @@ class {{ prefix }}{{ module_info.name }}ViewCell: UITableViewCell {
     // MARK: Vars
     // TODO
 
+    // MARK: Public
+
     func configure(with model: {{ prefix }}{{ module_info.name }}ModuleEntityModel) {
         // TODO
     }
@@ -21,5 +23,8 @@ class {{ prefix }}{{ module_info.name }}ViewCell: UITableViewCell {
     func stopDisplay() {
         // TODO
     }
+
+    // MARK: Helpers
+    // TODO
     
 }
