--- a/Code/Presenter/presenter.mcflurry.alert.swift.liquid
+++ b/Code/Presenter/presenter.mcflurry.alert.swift.liquid
@@ -65,4 +65,7 @@ class {{ prefix }}{{ module_info.name }}Presenter: NSObject, RamblerViperModuleI
 
     // MARK: {{ prefix }}{{ module_info.name }}InteractorOutput
     // TODO
+
+    // MARK: Helpers
+    // TODO
 }
