--- a/Code/Presenter/presenter.swift.liquid
+++ b/Code/Presenter/presenter.swift.liquid
@@ -49,4 +49,7 @@ class {{ prefix }}{{ module_info.name }}Presenter: NSObject, {{ prefix }}{{ modu
 
     // MARK: {{ prefix }}{{ module_info.name }}InteractorOutput
     // TODO
+
+    // MARK: Helpers
+    // TODO
 }
