--- a/Code/Router/router.mcflurry.alert.swift.liquid
+++ b/Code/Router/router.mcflurry.alert.swift.liquid
@@ -20,4 +20,7 @@ class {{ prefix }}{{ module_info.name }}Router: {{ prefix }}{{ module_info.name 
         }
     }
 
+    // MARK: Helpers
+    // TODO
+
 }
