--- a/Code/Service/default_impl.swift.liquid
+++ b/Code/Service/default_impl.swift.liquid
@@ -6,7 +6,7 @@ class {{ prefix }}{{ module_info.name }}ServiceImpl: ViperService, {{ prefix }}{
 
     // MARK: ViperService
 
-    func setupDependencies(_ container: ViperServicesContainer) -> [ViperService]? {
+    func setupDependencies(_ container: ViperServicesContainer) -> [AnyObject]? {
         // TODO
         return nil
     }
@@ -14,6 +14,11 @@ class {{ prefix }}{{ module_info.name }}ServiceImpl: ViperService, {{ prefix }}{
     func boot(launchOptions: [UIApplicationLaunchOptionsKey: Any]?, completion: @escaping ViperServiceBootCompletion) {
         // TODO
         completion(.succeeded)
+    }
+
+    func shutdown(completion: @escaping ViperServiceShutdownCompletion) {
+        // TODO
+        completion()
     }
 
     // MARK: {{ prefix }}{{ module_info.name }}Service
