--- a/Code/View/view.storyboard.liquid
+++ b/Code/View/view.storyboard.liquid
@@ -21,11 +21,13 @@
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aqI-SS-yFs" sceneMemberID="firstResponder"/>
+                {% if custom_parameters.extended_configurator_create != 'true' %}
                 <customObject id="5Rv-JW-reY" customClass="{{ prefix }}{{ module_info.name }}ModuleInitializer" customModule="" customModuleProvider="target">
                     <connections>
                         <outlet property="{{ module_info.name | downcase }}ViewController" destination="nTq-cw-PKg" id="wJI-Bu-aoP"/>
                     </connections>
                 </customObject>
+                {% endif %}
             </objects>
             <point key="canvasLocation" x="-188" y="-86"/>
         </scene>
