--- a/Code/View/view_controller.tabbar.swift.liquid
+++ b/Code/View/view_controller.tabbar.swift.liquid
@@ -27,4 +27,7 @@ class {{ prefix }}{{ module_info.name }}ViewController: UITabBarController, {{ p
 
     // MARK: UI Actions
     // TODO
+
+    // MARK: Helpers
+    // TODO
 }
