--- a/Code/Configurator/tabbar.configurator.swift.liquid
+++ b/Code/Configurator/tabbar.configurator.swift.liquid
@@ -7,7 +7,7 @@ class {{ prefix }}{{ module_info.name }}ModuleConfigurator {
 
     func configureModuleForViewInput<UIViewController>(viewInput: UIViewController{% if custom_parameters.extended_configurator_create and custom_parameters.extended_configure %}, with config: {{ prefix }}{{ module_info.name }}ModuleConfig{% endif %}) {
         if let viewController = viewInput as? {{ prefix }}{{ module_info.name }}ViewController {
-            configure(viewController: viewController)
+            configure(viewController: viewController{% if custom_parameters.extended_configurator_create and custom_parameters.extended_configure %}, with: config{% endif -%})
         }
     }
 
