--- a/Tests/Configurator/configurator_tests.swift.liquid
+++ b/Tests/Configurator/configurator_tests.swift.liquid
@@ -20,7 +20,7 @@ class {{ prefix }}{{ module_info.name }}ModuleConfiguratorTests: XCTestCase {
         let viewController = {{ prefix }}{{ module_info.name }}ViewControllerMock()
         let configurator = {{ prefix }}{{ module_info.name }}ModuleConfigurator()
         {% if custom_parameters.extended_configurator_create and custom_parameters.extended_configure %}
-        let config = {{ prefix }}{{ module_info.name }}ModuleConfig()
+        let config = {{ prefix }}{{ module_info.name }}ModuleConfig({% if custom_parameters.extended_configure_vars %}{% assign module_config_vars = custom_parameters.extended_configure_vars  | split: "," %}{% for config_var in module_config_vars %}{% assign var_components = config_var  | split: "=" %}{% if forloop.index0 != 0 %}, {% endif %}{{ var_components[0] }}: {% if var_components[1] contains '?' %}nil{% else %}{{var_components[1]}}(){% endif %} /*TODO*/{% endfor %}{% endif %})
         {% endif %}
 
         //when
